# wdpt_delta_manipulator

./: .gitmodules  README.md
delta_controller/: CMakeLists.txt  package.xml
delta_controller/include/delta_controller/: delta_controller.h
delta_controller/launch/: delta_thing.launch
delta_controller/src/: delta_controller.cpp  delta_controller2.cpp
delta_libs/: CMakeLists.txt  package.xml
delta_libs/src/: delta.cpp
joystick_drivers/joy/launch/: ps4delta.launch
