<?xml version="1.0"?>
<package format="2">
  <name>delta_controller</name>
  <version>0.0.0</version>
  <description>The delta_controller package</description>
  <maintainer email="martin@todo.todo">martin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>robotis_manipulator</depend>
  <depend>open_manipulator_libs</depend>
  <depend>delta_libs</depend>
  <depend>cmake_modules</depend>
  <depend>boost</depend>
</package>
