<?xml version="1.0"?>
<package format="2">
  <name>delta_libs</name>
  <version>0.0.0</version>
  <description>The delta_libs package</description>

  <maintainer email="martin@todo.todo">martin</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>robotis_manipulator</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>eigen</depend>
  <depend>robotis_manipulator</depend>
  <depend>roscpp</depend>


</package>
